--- a/example.html
+++ b/example.html
@@ -67,7 +67,7 @@
     new Vue({
       template : "<div class=\"row\">\
         <div class=\"toppart\">\
-          视图设计器\
+          视图设计器[new_framework.layout]\
           <button class=\"top-btn\" \
             v-btndisabled='button[2]'\
             v-for=\"button in buttons\" \
